--- a/cartao.html
+++ b/cartao.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feliz Aniversário!</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Montserrat:wght@400;600&display=swap');
+
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Montserrat', sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -57,14 +59,18 @@
         }
 
         .card-back {
-            background: white;
+            background: linear-gradient(to bottom right, #f3e7e9, #d3e0ea);
             transform: rotateY(180deg);
             text-align: center;
             color: #333;
             overflow-y: auto;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
 
         .card-front h1 {
+            font-family: 'Dancing Script', cursive;
             font-size: 2.5rem;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
         }
@@ -74,14 +80,40 @@
             margin-bottom: 20px;
         }
 
+        .card-back .heart {
+            font-size: 2.5rem;
+            margin-bottom: 15px;
+            color: #ff6b6b;
+        }
+
         .card-back h2 {
+            font-family: 'Dancing Script', cursive;
             color: #ff6b6b;
             margin-bottom: 15px;
+            font-size: 2rem;
         }
 
         .card-back p {
             margin-bottom: 15px;
             line-height: 1.6;
+            font-size: 0.9rem;
+            color: #555;
+        }
+
+        .card-back .signature {
+            font-family: 'Dancing Script', cursive;
+            color: #ff6b6b;
+            font-size: 1.3rem;
+            margin-top: 15px;
+        }
+
+        .card-back .doodle {
+            position: absolute;
+            bottom: 10px;
+            right: 10px;
+            font-size: 2rem;
+            color: #4ecdc4;
+            opacity: 0.5;
         }
 
         @media (max-width: 400px) {
@@ -100,11 +132,13 @@
                 <h1>Feliz Aniversário!</h1>
             </div>
             <div class="card-back">
+                <div class="heart">❤️</div>
                 <h2>Querida [Nome]</h2>
                 <p>Espero que este dia seja tão especial quanto você! Mesmo não podendo estar presente fisicamente, quero que saiba o quanto você significa para mim.</p>
                 <p>Nossa amizade é uma das coisas mais preciosas da minha vida. Cada momento que compartilhamos, cada risada, cada conversa, tudo isso forma memórias que guardo com muito carinho.</p>
                 <p>Que este ano traga para você muitas realizações, alegrias e momentos incríveis. Você merece todo o amor e felicidade do mundo!</p>
-                <p>Com todo meu amor,<br>[Seu Nome]</p>
+                <div class="signature">[Seu Nome]</div>
+                <div class="doodle">✿</div>
             </div>
         </div>
     </div>
