--- a/cartao.html
+++ b/cartao.html
@@ -7,10 +7,6 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Montserrat:wght@400;600&display=swap');
 
-        * {
-            box-sizing: border-box;
-        }
-
         body {
             font-family: 'Montserrat', sans-serif;
             display: flex;
@@ -19,7 +15,6 @@
             min-height: 100vh;
             margin: 0;
             background-color: #f0f4f8;
-            overscroll-behavior: contain;
         }
 
         .card {
@@ -54,6 +49,7 @@
             align-items: center;
             box-shadow: 0 10px 25px rgba(0,0,0,0.1);
             padding: 20px;
+            box-sizing: border-box;
         }
 
         .card-front {
@@ -67,16 +63,10 @@
             transform: rotateY(180deg);
             text-align: center;
             color: #333;
-            overflow: hidden;
+            overflow-y: auto;
             display: flex;
             flex-direction: column;
-        }
-
-        .card-back-content {
-            overflow-y: auto;
-            max-height: 100%;
-            padding-right: 10px;
-            -webkit-overflow-scrolling: touch;
+            justify-content: center;
         }
 
         .card-front h1 {
@@ -128,8 +118,8 @@
 
         @media (max-width: 400px) {
             .card {
-                width: 280px;
-                height: 380px;
+                width: 300px;
+                height: 650px;
             }
         }
     </style>
@@ -142,16 +132,12 @@
                 <h1>Feliz Aniversário!</h1>
             </div>
             <div class="card-back">
-                <div class="card-back-content">
-                    <div class="heart">❤️</div>
-                    <h2>Querida [Nome]</h2>
-                    <p>Espero que este dia seja tão especial quanto você! Mesmo não podendo estar presente fisicamente, quero que saiba o quanto você significa para mim.</p>
-                    <p>Nossa amizade é uma das coisas mais preciosas da minha vida. Cada momento que compartilhamos, cada risada, cada conversa, tudo isso forma memórias que guardo com muito carinho.</p>
-                    <p>Que este ano traga para você muitas realizações, alegrias e momentos incríveis. Você merece todo o amor e felicidade do mundo!</p>
-                    <p>Vamos sempre celebrar nossa amizade, independente da distância. Cada momento que passamos juntos é único e especial.</p>
-                    <p>Sei que você vai ter um dia incrível, cheio de sorrisos, abraços e muita alegria!</p>
-                    <div class="signature">[Seu Nome]</div>
-                </div>
+                <div class="heart">❤️</div>
+                <h2>Querida Bruna</h2>
+                <p>Espero que este dia seja tão especial quanto você! Mesmo não podendo estar presente fisicamente, quero que saiba o quanto você significa para mim.</p>
+                <p>Nossa amizade é uma das coisas mais preciosas da minha vida. Cada momento que compartilhamos, cada risada, cada conversa, tudo isso forma memórias que guardo com muito carinho.</p>
+                <p>Que este ano traga para você muitas realizações, alegrias e momentos incríveis. Você merece todo o amor e felicidade do mundo!</p>
+                <div class="signature">Will e Rafa</div>
                 <div class="doodle">✿</div>
             </div>
         </div>
